:recycle: openrewrite